--- a/app/views/forum_comments/_forum_comment.html.erb
+++ b/app/views/forum_comments/_forum_comment.html.erb
@@ -1,12 +1,22 @@
-<p><%= forum_comment.body %></p>
-<p><%= forum_comment.user.email %></p>
-
-<% if !current_user.nil? && (current_user.id == forum_comment.user_id || current_user.admin?) %>
+  <div class="user_data">
+    <%= image_tag forum_comment.user.picture.url(:large) %>
+    <div class="clear_it"></div>
+    <%= forum_comment.user.email %><br>
+    <%= forum_comment.created_at.strftime("%l:%M %P %Z on %B, %d, %Y") %><br>
+  </div>
   
-  <%= link_to "Edit", edit_forum_thread_forum_comment_path(forum_comment.forum_thread, forum_comment) %> 
-  <%= link_to "Delete", [forum_comment.forum_thread, forum_comment], method: :delete,
-                            data: { confirm: "Are you sure?" } %>
+  <p><%= forum_comment.body %></p>
+  
+  
+  <% if !current_user.nil? && (current_user.id == forum_comment.user_id || current_user.admin?) %>
+    
+    <%= link_to "Edit", edit_forum_thread_forum_comment_path(forum_comment.forum_thread, forum_comment) %> 
+    <%= link_to "Delete", [forum_comment.forum_thread, forum_comment], method: :delete,
+                              data: { confirm: "Are you sure?" } %>
+                              
+  <% end %>
+     <div class="clear_it"></div>
+     
+   <hr>
                             
-<% end %>
-                           
-<br><br>
+  <br><br>
