--- a/app/views/forum_comments/_form.html.erb
+++ b/app/views/forum_comments/_form.html.erb
@@ -1,12 +1,11 @@
 <%= form_for([@thread, @thread.forum_comments.build]) do |f| %>
 
   <p>
-    <%= f.label :body %>
     <%= f.text_area :body %>
   </p>
   
   <p>
-    <%= f.submit "Create Comment" %>
+    <%= f.submit "Create Comment", class: "create_comment_btn" %>
   </p>
   
 <% end %>
