--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -135,19 +135,41 @@ h3 {
 
 /* index page */
 .post_tile { text-align: center; 
-    border: 1px solid black;
+    // border: 1px solid black;
     h2 {
     text-align: center; 
-    background-color: $blue;
+    font-size: 1em;
+    background-color: rgba(16,22,127, .55);
+    // opacity: 0.5;
     padding: 10px 0px 10px 0px;
     margin-bottom: -16px;
+    position: relative;
+    top: 50px;
+    z-index: 1000;
+    // width: 75%;
+    height: 30px;
     }
+    h3 {
+    text-align: center; 
+    font-size: 1em;
+    background-color: rgba(255, 150, 0, .65);
+    padding: 10px 5px 10px 5px;
+    position: relative;
+    bottom: 37px;
+    z-index: 1000;
+    width: 25%;
+    float: right;
+    a:hover {
+      color: black;
+    }
+    }
+
     a {
     color: white;
     text-decoration: none;
         &:hover {
-        color: $lightblue;
-        }
+        color: $bluegray;
+      }
     }
     p {
        background-color: $blue;
@@ -802,6 +824,16 @@ nav {
   margin-right: 100px;  
 }
 }
+
+@media only screen and (max-width: 1650px) {
+  .post_tile {
+    h3 {
+      // font-size: .75em;
+      width: 50%;
+    }
+  }
+}
+
 
 
 @media only screen and (max-width: 1500px) {
