--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,6 +125,12 @@
   </div> <!-- end of main_content -->
   
   <footer class="clear_it">
+    <aside>
+           1651 Jefferson Parkway<br>
+           Northfield, MN 55057<br>
+          (507) 664-3510
+    </aside>
+    <p>Website By Aaron Hagenson, 2015</p>
     <%= debug(params) if Rails.env.development? %>
   </footer>  
   
