--- a/app/views/layouts/index_layout.html.erb
+++ b/app/views/layouts/index_layout.html.erb
@@ -98,7 +98,17 @@
 
       <%= yield %>
       
-      <%= debug(params) if Rails.env.development? %>
+     <footer class="clear_it">
+           <aside>
+           1651 Jefferson Parkway<br>
+           Northfield, MN 55057<br>
+          (507) 664-3510
+          </aside>
+
+       <p>Website By Aaron Hagenson, 2015</p>
+       <%= debug(params) if Rails.env.development? %>
+     </footer>  
+
       
   </body>
 </html>
