--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,12 +126,15 @@
   
   <footer class="clear_it">
     <aside>
+           connect@northfieldunitedway.com<br>
            1651 Jefferson Parkway<br>
            Northfield, MN 55057<br>
           (507) 664-3510
     </aside>
     <p>Website By Aaron Hagenson, 2015</p>
     <%= debug(params) if Rails.env.development? %>
+    <div class="clear_it"></div>
+
   </footer>  
   
   </body>
