--- a/app/views/layouts/index_layout.html.erb
+++ b/app/views/layouts/index_layout.html.erb
@@ -107,6 +107,7 @@
 
        <p>Website By Aaron Hagenson, 2015</p>
        <%= debug(params) if Rails.env.development? %>
+      <div class="clear_it"></div>
      </footer>  
 
       
