--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,10 +21,10 @@
     <br><br>
     
     
-    <p>
-      <%= f.label :summary %><br><br>
-      <%= f.text_area :summary, class: "textarea" %>
-    </p>
+    <!--<p>-->
+      <%#= f.label :summary %><br><br>
+      <%#= f.text_area :summary, class: "textarea" %>
+    <!--</p>-->
     
     <p>
       <%= f.label :body %><br><br>
